# marpich-erp

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
backend/: .env.example  .importlinter  README.md  conftest.py  pyproject.toml
backend/contexts/: README.md  __init__.py  registry.py
backend/contexts/_template/: MODULE.md  container.py  context.yaml
backend/contexts/accounting/: container.py  context.yaml
backend/contexts/ai/: container.py  context.yaml
backend/contexts/analytics/: container.py  context.yaml
backend/contexts/audit/: container.py  context.yaml
backend/contexts/authentication/: container.py  context.yaml
backend/contexts/authorization/: container.py  context.yaml
backend/contexts/banking/: container.py  context.yaml
backend/contexts/business_continuity/: container.py  context.yaml
backend/contexts/clinic/: container.py  context.yaml
backend/contexts/compliance/: container.py  context.yaml
backend/contexts/construction/: context.yaml
backend/contexts/core_platform/: container.py  context.yaml
backend/contexts/crm/: context.yaml
backend/contexts/currency_exchange/: context.yaml
backend/contexts/data_isolation/: container.py  context.yaml
backend/contexts/directory/: container.py  context.yaml
backend/contexts/documents/: container.py  context.yaml
backend/contexts/enterprise_connector_framework/: container.py  context.yaml
backend/contexts/enterprise_integration_studio/: container.py  context.yaml
backend/contexts/enterprise_observability/: container.py  context.yaml
backend/contexts/enterprise_scheduler/: container.py  context.yaml
backend/contexts/feature_flags/: container.py  context.yaml
backend/contexts/finance/: container.py  context.yaml
backend/contexts/financial_kernel/: container.py  context.yaml
backend/contexts/government/: context.yaml
backend/contexts/hospital/: container.py  context.yaml
backend/contexts/hotel/: context.yaml
backend/contexts/human_resources/: context.yaml
backend/contexts/identity/: container.py  context.yaml
backend/contexts/identity_digital_twin/: container.py  context.yaml
backend/contexts/identity_federation/: container.py  (+1 more)
backend/core/: __init__.py
backend/scripts/: smoke_livekit_secrets.py
backend/shared/: __init__.py
backend/tests/: test_app_profiles.py
(+2988 files in other folders)
