[project]
name = "marpich-backend"
version = "0.1.0"
description = "Marpich ERP — FastAPI enterprise backend (Clean Architecture)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "pyotp>=2.9.0",
    "email-validator>=2.2.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "contexts", "core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--import-mode=importlib"
testpaths = [
    "shared/tests",
    "contexts/identity/tests",
    "contexts/hospital/tests",
    "contexts/clinic/tests",
    "contexts/municipality/tests",
    "contexts/pos/tests",
    "contexts/localization/tests",
    "contexts/core_platform/tests",
    "contexts/finance/tests",
    "contexts/notifications/tests",
    "contexts/settings/tests",
    "contexts/organization/tests",
    "contexts/audit/tests",
    "contexts/documents/tests",
    "contexts/workflow/tests",
    "contexts/integration/tests",
    "contexts/media/tests",
    "contexts/analytics/tests",
    "contexts/search/tests",
    "contexts/financial_kernel/tests",
    "contexts/treasury/tests",
    "tests/integration",
    "tests/contracts",
    "tests/architecture",
    "contexts/enterprise_observability/tests",
    "contexts/enterprise_scheduler/tests",
    "contexts/enterprise_integration_studio/tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
